[package]
name = "commander-rust"
version = "1.1.4"
description = "A better way to develop CLI in Rust"
authors = ["dimos <doubledimos@outlook.com>"]
edition = "2018"
license = "MIT"
# documentation = "https://github.com/MSDimos/commander-rust"
# homepage = "https://github.com/MSDimos/commander-rust"
repository = "https://github.com/MSDimos/commander-rust"
readme = "README.md"
keywords = ["cli", "commander", "arg", "args", "arguments", "command", "sub-command"]
categories = ["command-line-interface"]
exclude = [
    "homepage/",
    "examples/",
    "docs/",
    "crates/"
]

[dependencies.commander-core]
path = "crates/commander-core"
version = "1.1.3"

[dependencies.commander-macros]
path = "crates/commander-macros"
version = "1.1.3"

[dependencies]
lazy_static = "1.2.0"