[package]
name = "commander-macros"
version = "1.1.4"
authors = ["dimos <doubledimos@outlook.com>"]
edition = "2018"
description = "This crate is used by commander-rust only. Please don't use it!"
license-file = "MIT"

[lib]
proc-macro = true

[dependencies.syn]
version = "0.15.26"
features = ["full", "extra-traits", "parsing"]

[dependencies]
proc-macro2 = "0.4.24"
quote = "0.6.11"
lazy_static = "1.2.0"