[package]
name = "commander-macros"
version = "1.2.0"
authors = ["dimos <doubledimos@outlook.com>"]
edition = "2018"
description = "This crate is used by commander-rust only. Please don't use it!"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
lazy_static = "1.2.0"

[dependencies.syn]
version = "1"
features = ["full", "extra-traits", "parsing"]
