[package]
name = "commander-rust-core"
version = "0.1.0"
authors = ["Dimos Double <doubledimos@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
test = ["regex"]

[dependencies]
colored = "1.9"

[dependencies.regex]
version = "1"
optional = true
