[package]
name = "commander-rust-macro"
version = "0.1.0"
authors = ["Dimos Double <doubledimos@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[features]
default = []
# if test allowed, some variable will be injected into code
# run `cargo test --feature test` to test with feature `test`
test = []

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
lazy_static = "1.4"

[dependencies.syn]
version = "1.0.27"
features = ["extra-traits", "full", "derive"]
